[gd_scene load_steps=2 format=3 uid="uid://34fcsdgaish7"]

[ext_resource type="Script" path="res://Maps/MainMenu/Main.gd" id="1_8abl0"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8abl0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_right = 31.0
offset_bottom = 101.0
grow_horizontal = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Option"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Options" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.0
offset_top = -50.0
offset_right = 239.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Options"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Options/HBoxContainer"]
layout_mode = 2
text = "Up - W
Left - A
Right - D
Down - S
Interact - F / E"
horizontal_alignment = 1

[node name="OptionClose" type="Button" parent="Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Close"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Options/OptionClose" to="." method="_on_option_close_pressed"]
